Fix for n+1 problem